# news_blog

./: .env-test  .pre-commit-config.yaml  Dockerfile  README.md  dev-compose.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
LIIS_test/: asgi.py  settings.py  urls.py  wsgi.py
news_feed/: models.py  pagination.py  serializers.py  urls.py  views.py
news_feed/migrations/: 0001_initial.py  0002_article_type.py  0003_delete_rating.py
news_feed/service/: querysets.py
nginx/: nginx.conf
tests/news_feed/: test_news_view.py
tests/user/: test_user_view.py
user/: managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_remove_user_date_joined_remove_user_first_name_and_more.py  0003_subscription.py  0004_alter_user_user_role.py  0005_rename_author_id_subscription_author_and_more.py
